# hikvision-isapi-py

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
example/: client_usage.py
hikvision_isapi/: __init__.py  client.py
